[package]
name = "forest"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.7.0"
minibytes = { path = "third-party/minibytes", default_features = false, features = ["frommmap", "frombytes"] }
smallvec = "1.13.2"
parking_lot = "0.12.3"
crc32fast = "1.3.2"
bytes = "1.7.1"

[dev-dependencies]
rand = "0.8.5"
