[package]
name = "tidehunter"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.7.0"
minibytes = { path = "third-party/minibytes", default_features = false, features = ["frommmap", "frombytes"] }
smallvec = "1.13.2"
parking_lot = "0.12.3"
crc32fast = "1.3.2"
bytes = "1.7.1"
bincode = "1.3.3"
serde = { version = "1.0.208", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"], optional = true }
rand = { version = "0.8.5" , optional = true }
tempdir = { version = "0.3.7" , optional = true}
prometheus = "0.13.3"
tokio = { version = "1.36.0", features = ["full"] }
histogram = { version = "0.11.1", optional = true }
axum = { version = "0.6.18", optional = true }

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.5"

[features]
stress = [
    "rand",
    "tempdir",
    "clap",
    "histogram",
    "axum",
]
